--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,7 +1,7 @@
 <h1 class="center">Welcome to Noteful</h1>
 <p class="center">Take notes online and access them from anywhere!</p>
 
-<div class='pull-right'>
+<div class='pull-right'>"
   <%= link_to "Add a note", new_note_path %>
 </div>
 
@@ -9,7 +9,14 @@
   <% @notes.each do |note| %>
     <%= div_for note do %>
       <h2><%= note.title %></h2>
-      <p><%= note.content %></p>
+      <p>
+        <%if note.willTruncate %>
+        <%= note.preview %> 
+        <%= link_to '(read more)', note_path(note) %>
+        <% else %>
+        <%= note.preview %>
+      <% end %>
+      <p><%= note.created_at %></p>
       <p><%= link_to 'Show', note_path(note) %> |
         <%= link_to 'Edit', edit_note_path(note) %> |
         <%= link_to 'Destroy', note_path(note), method: :delete, data: { confirm: 'Are you sure?' } %></p>
